# Pathfinder

./: CMakeCache.txt  CMakeLists.txt
examples/: basic.cpp  swerve.cpp  tank.cpp
src/: generator.cpp  io.cpp  mathutil.cpp  spline.cpp  trajectory.cpp
src/fit/: hermite.cpp
src/followers/: distance.cpp  encoder.cpp
src/modifiers/: swerve.cpp  tank.cpp
